changed drinks to tequilla bar

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -95,7 +95,7 @@
     <div class="col-sm-12">
       <div class="card text-center">
         <div class="card block">
-        <a href="drinks">  <h4 class="card-title">Drinks</h4></a>
+        <a href="drinks">  <h4 class="card-title">Tequila Bar</h4></a>
         </div>
       </div>
     </div>
