--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -61,7 +61,7 @@
     <div class="card text-center">
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
-      <%= link_to "Drinks", drinks_path, class: "btn btn-danger" %>
+      <%= link_to "Tequila Bar", drinks_path, class: "btn btn-danger" %>
   </div>
 </div>
 </div>
