added appetizers to seperate apps page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,8 @@
     <%= link_to "Lunch", lunch_path, class: "dropdown-item"%>
     <%= link_to "Brunch", brunch_path, class: "dropdown-item"%>
     <%= link_to "Dessert", dessert_path, class: "dropdown-item" %>
+    <%= link_to "Apps & Snacks", apps_path, class: "dropdown-item" %>
+
     <%= link_to "Tequilla Bar", drinks_path, class: "dropdown-item" %>
 
 </div>
