--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -6,14 +6,18 @@
 <h1 class="menu-title">Postres (Desserts)</h1>
 
 
+<div class="container">
+  <div class="row">
   <% @desserts.each do |dessert| %>
-  <table class="menu">
-    <tr>
-      <th><p class="card-title"><%= dessert.title %></p></th>
-      <th><p class="price">$<%= dessert.price %></p></th>
-    </tr>
-    <tr>
-      <th ><p class="description"><%= dessert.description %></p></th>
-    </tr>
-  </table>
+
+    <div class="col-sm-6 col-lg-4">
+      <div class="card text-center">
+        <div class="card block">
+          <h4 class="card-title"><%= dessert.title %>    $<%= dessert.price %></h4>
+          <p class="card-text"><%= dessert.description %></p>
+        </div>
+      </div>
+    </div>
   <% end %>
+</div>
+</div>
