added photos to appetizers menu

--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -6,7 +6,11 @@
 
 <h1 class="menu-title">Appetizers Snacks & Salads</h1>
 
+<%= image_tag 'snack.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head">Antojiotos (Appetizers)</h2>
+
+<%= image_tag 'appetizer.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -26,6 +30,8 @@
 
 <h2 class="menu-head">Tapas</h2>
 
+<%= image_tag 'tapas.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @tapas.each do |tapa| %>
@@ -44,6 +50,9 @@
 
 
 <h2 class="menu-head">Sopas (Soups)</h2>
+
+<%= image_tag 'soup.jpg', class: 'menu-photo' %>
+
 
 <h4 id="nacho">Cup $4.00 Bowl $6.00</h4>
 
@@ -66,6 +75,9 @@
 
 <h2 class="menu-head">Favorite Dips</h2>
 
+<%= image_tag 'dip.jpg', class: 'menu-photo' %>
+
+
 <h4 id="nacho">Served with Tri Color Tortilla Chips</h4>
 
 <div class="container">
@@ -86,6 +98,9 @@
 
 <h2 class="menu-head">Nachos</h2>
 
+<%= image_tag 'nacho.jpg', class: 'menu-photo' %>
+
+
 <div class="container">
   <div class="row">
   <% @nachos.each do |nacho| %>
@@ -104,6 +119,9 @@
 
 
 <h2 class="menu-head">Ensaladas (Salads)</h2>
+
+<%= image_tag 'salad.jpg', class: 'menu-photo' %>
+
 
 <div class="container">
   <div class="row">
