--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -14,6 +14,7 @@
   </div>
 </div>
 
+<div class="container">
     <div class="carousel">
       <div><%= image_tag 'carousel01.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'carousel02.jpg', class: 'img-fluid' %></div>
@@ -32,7 +33,7 @@
         });
       });
     </script>
-  </div>
+</div>
   <h1 class="menu-title">Check Out Our Menus!</h1>
 
 <div class="row">
