--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -213,6 +213,7 @@ label {
 
 #nacho {
   text-align: center;
+  padding-top: 25px;
 }
 
 .soup {
@@ -243,4 +244,9 @@ nav {
 
 .img-fluid {
   width: 100%;
+}
+
+.menu-photo {
+  width: 100%;
+  height: 400px;
 }
