--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -6,7 +6,9 @@
 
 <h1 class="menu-title">Appetizers Snacks & Salads</h1>
 
+<div class="container">
 <%= image_tag 'snack.jpg', class: 'menu-photo' %>
+</div>
 
 <h2 class="menu-head">Antojiotos (Appetizers)</h2>
 
