--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -34,6 +34,7 @@
       });
     </script>
 </div>
+
   <h1 class="menu-title">Check Out Our Menus!</h1>
 
 <div class="row">
@@ -78,7 +79,7 @@
     <div class="col-md-6">
       <div class="card text-center">
         <div class="card block">
-          <a href="dessert"><h4 class="card-title">Dessert</h4></a>
+          <a href="dessert"><h4 class="card-title">Desserts</h4></a>
           <p class="card-text">All Day Long!</p>
         </div>
       </div>
@@ -86,6 +87,18 @@
 </div>
 </div>
 </div>
+
+<div class="container">
+    <div class="col-sm-12">
+      <div class="card text-center">
+        <div class="card block">
+        <a href="apps">  <h4 class="card-title">Apps, Snacks, & Salads</h4></a>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
+
 
 <div class="container">
     <div class="col-sm-12">
