--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -34,7 +34,7 @@
 
 <div class="row">
   <div class="col-sm-3"></div>
-  <div class="col-sm-6"><%= image_tag 'mayan-logo.jpg' %>
+  <div class="col-sm-6"><%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
   </div>
 </div>
 
