added footer, and changed monkey size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -259,3 +259,15 @@ nav {
 .hours {
   padding-top: 10px;
 }
+
+.btn-danger {
+  background: gray;
+}
+
+.btn-danger:hover {
+  background: black;
+}
+
+.card-block-menu {
+  background: gray;
+}
