--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,45 +1,46 @@
-<%= render 'layouts/header' %>
-<h1 class="menu-title"> Contact Us</h1>
-
-
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6"><%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
+  </div>
+</div>
 
 <div class="row">
 
-    <div class="col-sm-6">
+    <div class="col-sm-3">
+                <h4 class="menu-head">Visit Us!</h4>
+
       <div class="card text-center">
         <div class="card block">
-          <h4 class="menu-head">Visit Us!</h4>
           <p class="card-text">507 Broad Street
 Chattanooga, TN 37402</p>
 
 <div class="container">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13064.127065609191!2d-85.32191899924183!3d35.05594488694202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88605e6253590e9f%3A0x58dc5c4652d15155!2s507+Broad+St%2C+Chattanooga%2C+TN+37402!5e0!3m2!1sen!2sus!4v1509159902317" width="450" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13064.127065609191!2d-85.32191899924183!3d35.05594488694202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88605e6253590e9f%3A0x58dc5c4652d15155!2s507+Broad+St%2C+Chattanooga%2C+TN+37402!5e0!3m2!1sen!2sus!4v1509159902317" width="250" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
+
         </div>
       </div>
     </div>
 
 
-    <div class="col-sm-6">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Hours</h4>
-          <p class="card-title">Mon - Thur</p>
-          <p class="card-text">11AM - 10PM</p>
-          <p class="card-title">Friday</p>
-          <p class="card-text">11AM - 12AM</p>
-          <p class="card-title">Saturday</p>
-          <p class="card-text">9AM - 12AM</p>
-          <p class="card-title">Sunday</p>
-          <p class="card-text">9AM - 10PM</p>
+          <h5>Mon - Thur</h5>
+          <h6>11AM - 10PM</h6>
+          <h5 class="hours">Friday</h5>
+          <h6>11AM - 12AM</h6>
+          <h5 class="hours">Saturday</h5>
+          <h6>10AM - 12AM</h6>
+          <h5 class="hours">Sunday</h5>
+          <h6>10AM - 10PM</h6>
 
         </div>
       </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Call Us!</h4>
@@ -55,7 +56,7 @@ Chattanooga, TN 37402</p>
     </div>
 
 
-    <div class="col-sm-6">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Follow Us!</h4>
@@ -68,3 +69,4 @@ Chattanooga, TN 37402</p>
     </div>
 
 </div>
+</body>
