removed hours of lunch and brunch from card block

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -28,9 +28,9 @@
     <%= image_tag 'food02.jpg' %>
       <div class="card-block-menu">
       <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
-              <p class="card-text">Mon-Fri 11AM-3PM</p>
+    </div>
+              <p class="card-text">Mon-Fri 12PM-3PM</p>
 
-  </div>
 </div>
 
 </div>
@@ -41,9 +41,9 @@
     <%= image_tag 'food03.jpg' %>
       <div class="card-block-menu">
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
-              <p class="card-text">Sat & Sun 10AM-3PM</p>
+    </div>
+              <p class="card-text">Sat & Sun 10AM-12PM</p>
 
-  </div>
 </div>
 </div>
 
