--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -11,7 +11,6 @@
 
 <%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
 
-<div class="container">
     <div class="carousel">
       <div><%= image_tag 'carousel01.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'carousel02.jpg', class: 'img-fluid' %></div>
@@ -24,10 +23,10 @@
             infinite: true,
             autoplay: true,
             autoplaySpeed: 5000,
+            arrows: false,
             fade: true,
             slidesToShow: 1,
         });
       });
     </script>
-</div>
 
