changed color of menu butons to dimgray

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -261,7 +261,7 @@ nav {
 }
 
 .btn-danger {
-  background: gray;
+  background: dimgray;
 }
 
 .btn-danger:hover {
@@ -269,7 +269,7 @@ nav {
 }
 
 .card-block-menu {
-  background: gray;
+  background: dimgray;
 }
 
 li {
