completed adition fo pdf to application.

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,255 +1,11 @@
-<div class="row">
-	<div class="column">
+<h1 class="menu-title"> Application for Employment</h1>
 
-<div class="apply">
-<h4>507 Broad Street | Chattanooga, TN 37402 
-</br>
-Office: 423-682-7835 Fax: 423-682-7836
-</h4>
-<h2> Application for Employment</h2>
-</div>
+<h2>Instructions<h2>
+	<h3> Please click the button below to download the PDF application.</h3>
+	<h3>Fill out the application in it's entirety, do not leave any fields blank.</h3>
+	<h3>When Completed, you may turn this application into someone at The Mayan Kitchen, or you may email it to hr@mayankitchen.com</h3>
 
 
-<form action="//submit.form" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
-<script type="text/javascript">
-function ValidateForm(frm) {
-if (frm.First_Name.value == "") { alert('First name is required.'); frm.First_Name.focus(); return false; }
-if (frm.Last_Name.value == "") { alert('Last name is required.'); frm.Last_Name.focus(); return false; }
-if (frm.Email_Address.value == "") { alert('Email address is required.'); frm.Email_Address.focus(); return false; }
-if (frm.Email_Address.value.indexOf("@") < 1 || frm.Email_Address.value.indexOf(".") < 1) { alert('Please enter a valid email address.'); frm.Email_Address.focus(); return false; }
-if (frm.Position.value == "") { alert('Position is required.'); frm.Position.focus(); return false; }
-if (frm.Phone.value == "") { alert('Phone is required.'); frm.Phone.focus(); return false; }
-return true; }
-</script>
 
-<table border="0" cellpadding="5" cellspacing="0">
-<tr> 
+<%= link_to 'Download PDF', main_download_pdf_url, class: 'btn btn-primary' %>
 
-<tr> <td colspan="2">
-<label for="Name"><b>Name *</b>
-</label><br />
-
-<input name="Name" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
-
-<tr> <td colspan="2">
-<label for="Address"><b>Address *</b>
-</label><br />
-
-<input name="Address" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
-
-</tr> 
-
-<tr> <td colspan="2">
-<label for="Email_Address"><b>Email *</b>
-</label><br />
-
-<input name="Email_Address" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
-<tr> 
- 
-
-<tr> <td>
-
-<label for="Date of Birth"><b>Date of Birth *</b></label><br />
-<input name="Date of Birth" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-<td>
-
-<label for="Phone"><b>Phone *</b></label><br />
-<input name="Phone" type="text" maxlength="50" style="width: 260px" />
-
-</td> </tr> 
-
-<tr> <td colspan="2">
-<label for="Position"><b>Position(s) applying for *</b>
-</label><br />
-
-<input name="Position" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
-
-<tr><td>
-	<h2>Availability</h2>
-</td></tr>
-<tr> 
-
-<td> 
-
-
-<label for="Monday"><b>Monday</b></label><br />
-<input name="Monday" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-
-<td>
-<label for="Tuesday"><b>Tuesday</b></label><br />
-<input name="Tuesday" type="text" maxlength="50" style="width: 260px" />
-
-
-</td> 
-</tr>
-<tr>
-<td>
-<label for="Wednesday"><b>Wednesday</b></label><br />
-<input name="Wednesday" type="text" maxlength="50" style="width: 260px" />
-
-
-</td> 
-
-<td>
-<label for="Thursday"><b>Thursday</b></label><br />
-<input name="Thursday" type="text" maxlength="50" style="width: 260px" />
-
-
-</td> 
-
-</tr>
-
-<tr>
-
-<td>
-<label for="Friday"><b>Friday</b></label><br />
-<input name="Friday" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-
-
-<td>
-<label for="Saturday"><b>Saturday</b></label><br />
-<input name="Saturday" type="text" maxlength="50" style="width: 260px" />
-
-
-</td> 
-</tr> 
-
-<tr>
-
-<td>
-<label for="Sunday"><b>Sunday</b></label><br />
-<input name="Sunday" type="text" maxlength="50" style="width: 260px" />
-
-
-</td> 
-
-</rt>
-
-<tr> <td colspan="2">
-</td> </tr> 
-
-<tr> <td colspan="2">
-
-<label for="Conflicts"><b>Possible Scheduling Conflics(School, Jobs, Vacations)</b></label><br />
-<input name="Availability" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
-
-<tr><td>
-	<h2>Education History</h2>
-</td></tr>
-
-<tr> <td colspan="2">
-
-<label for="High School"><b>Name of High School</b></label><br />
-<input name="High School" type="text" maxlength="100" style="width: 535px" />
-</td>
-
-<tr> <td>
-
-<label for="High School Grad"><b>Graduation Date</b></label><br />
-<input name="High School Grad" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-
- </tr> 
-
- </tr> 
-
- <tr> <td colspan="2">
-
-<label for="College"><b>College</b></label><br />
-<input name="College" type="text" maxlength="100" style="width: 535px" />
-</td>
-</tr>
-<tr> <td>
-
-<label for="College Graduation"><b>Graduation Date</b></label><br />
-<input name="College Graduation" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-<td>
-
-<label for="College Focus"><b>Focus of Study</b></label><br />
-<input name="College Focus" type="text" maxlength="50" style="width: 260px" />
-
-</td> </tr> 
-
-
-
-<tr><td>
-	<h2>Work History</h2>
-</td></tr>
-
-<tr> <td colspan="2">
-
-<label for="Previous Employer 1"><b>Previous Employer</b></label><br />
-<input name="Previous Employer 1" type="text" maxlength="100" style="width: 535px" />
-</td>
-
-<tr> <td>
-
-<label for="Start Date 1"><b>Started</b></label><br />
-<input name="Start Date 1" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-<td>
-
-<label for="End Date 1"><b>Ended</b></label><br />
-<input name="End Date 1" type="text" maxlength="50" style="width: 260px" />
-
-</td> </tr> 
-
- </tr> 
-
- <tr> <td colspan="2">
-
-<label for="Previous Employer 2"><b>Previous Employer</b></label><br />
-<input name="Previous Employer 2" type="text" maxlength="100" style="width: 535px" />
-</td>
-
-<tr> <td>
-
-<label for="Start Date 2"><b>Started</b></label><br />
-<input name="Start Date 2" type="text" maxlength="50" style="width: 260px" />
-
-</td> 
-<td>
-
-<label for="End Date 2"><b>Ended</b></label><br />
-<input name="End Date 2" type="text" maxlength="50" style="width: 260px" />
-
-</td> </tr> 
-
-
-<tr> <td colspan="2">
-
-
-
-<label for="Reference"><b>Reference / Comments / Questions</b></label><br />
-
-<textarea name="Reference" rows="7" cols="40" style="width: 535px"></textarea>
-</td> </tr> 
-<tr> <td colspan="2" style="text-align: center;">
-
-<div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY: UPBU7KZQGT8E/SEND:admin@mayankitchen.com" type="text/javascript"></script>
-<input name="skip_submit" type="submit" value="Submit Application" />
-</td> </tr>
-</table>
-</form>
-</div>
-
-<div class="column" id="logo">
-<%= image_tag 'mayan-logo1.jpg', height: 250, width: 350 %>
-</div>
-</div>
