--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,5 +1,5 @@
 <h1 class="menu-title"> Application for Employment</h1>
-
+<div class="container">
 <h2>Instructions<h2>
 	<h3> Please click the button below to download the PDF application.</h3>
 	<h3>Fill out the application in it's entirety, do not leave any fields blank.</h3>
@@ -9,3 +9,4 @@
 
 <%= link_to 'Download PDF', main_download_pdf_url, class: 'btn btn-primary' %>
 
+</div>
