--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,9 +1,11 @@
 <h1 class="menu-title"> Application for Employment</h1>
+<div class="container">
 <h2 class="app-inst">Instructions<h2>
 	<h3 class="app-inst"> Please click the button below to download the PDF application.</h3>
 	<h3 class="app-inst">Fill out the application to it's entirety, do not leave any fields blank.</h3>
 	<h3 class="app-inst">When completed, you may turn this application into someone at The Mayan Kitchen, or you may email it to hr@mayankitchen.com</h3>
 
+</div>
 
 <div class="row">
 	<div class="col-sm-5"></div>
