added text to apply button

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -11,6 +11,6 @@
 	<div class="col-sm-5"></div>
 	<div class="col-sm-6">
 
-<%= link_to 'Download PDF', main_download_pdf_url, class: 'btn btn-primary' %>
+<%= link_to 'Download Application', main_download_pdf_url, class: 'btn btn-primary coll center-block', id: 'apply-btn' %>
 </div>
 </div>
