--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,3 +1,8 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
 <h1 class="menu-title"> Application for Employment</h1>
 <div class="text-center">
 <h2 class="app-inst">Instructions<h2>
