altered header navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,9 +238,6 @@ label {
   margin-right: 0;
 }
 
-nav {
-  padding-right: 30px;
-}
 
 .img-fluid {
   width: 100%;
@@ -281,6 +278,6 @@ li {
   padding-bottom: 10px;
 }
 
-.block-center {
-  float: none;
+.mayan-head {
+  background: black;
 }
