--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <h4 id="nav-address">507 Broad Street | Chattanooga, TN 37402  | Phone: (423)-682-7835 Fax: (423)-682-7836 </h4>
 
-<div class="row">
-<div class="col-sm-12">
+<div class="mayan-head">
+<div class="text-center">
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: none; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
@@ -11,8 +11,8 @@
 
 <!-- Links -->
 <div class="collapse navbar-collapse" id="nav-content">   
-  <ul class="navbar-nav navbar-center">
-    <a class="navbar-brand" href="/"><%= image_tag 'monkey.png', height: 200, width: 200 %></a>
+  <ul class="navbar-nav">
+    <a class="navbar-brand" href="/"><%= image_tag 'monkey.png', height: 200, width: 200, class: 'monkey-head' %></a>
 
     <li class="nav-item">
     	<%= link_to "Home", root_path, class: "btn btn-primary" %>
@@ -50,10 +50,11 @@
 
 
 
-<a class="navbar-brand" href="/"><%= image_tag 'monkey2.png', height: 200, width: 200 %></a>
+<%= image_tag 'monkey2.png', height: 200, width: 200, class: 'monkey-head' %>
 
 </ul>
 
 </nav>
+</div>
 </div>
 </div>
